# xdsl-smt

./: .gitignore  README.md  pyproject.toml
eval_engine/: CMakeLists.txt  eval.py
eval_engine/src/: main.cpp
scripts/: cloudlab_setup.sh  gen_image.py  gen_table.py  precision.py  profile.py  run.sh  unsound.py
scripts/python_utils/: mcmc.py  precision.py  profile.py  unsound.py
tests/random/: modu_random.txt
tests/synth/: knownBitsAshr.mlir  knownBitsLshr.mlir  knownBitsShl.mlir  knownBitsUrem.mlir
tests/synth/ConstantRange/: integerRangeAddNswNuw.mlir  integerRangeAnd.mlir  integerRangeAshrExact.mlir  integerRangeMods.mlir  integerRangeModu.mlir  integerRangeMulNsw.mlir  integerRangeMulNswNuw.mlir  integerRangeOr.mlir  integerRangeSdiv.mlir  integerRangeSdivExact.mlir  integerRangeShl.mlir  integerRangeShlNsw.mlir  integerRangeShlNswNuw.mlir  integerRangeShlNuw.mlir  integerRangeSmax.mlir  integerRangeSmin.mlir  integerRangeSmulSat.mlir  integerRangeSsubSat.mlir  integerRangeUmax.mlir  integerRangeUmin.mlir  integerRangeUmulSat.mlir  integerRangeUsubSat.mlir  integerRangeXor.mlir
tests/synth/IntegerModulo/: IntegerModuloMulNuw.mlir  IntegerModuloOr.mlir  get_constraint.mlir  get_instance_constraint.mlir  meet.mlir  top.mlir
tests/synth/KnownBits/: KnownBitsUaddSat.mlir  const_rhs.mlir  get_constraint.mlir  knownBitsAbdu.mlir  knownBitsAvgCeilS.mlir  knownBitsLshrExact.mlir  knownBitsSmax.mlir  knownBitsSmin.mlir  knownBitsSubNswNuw.mlir  knownBitsSubNuw.mlir  knownBitsUdivExact.mlir  knownBitsUmax.mlir  meet.mlir  top.mlir
tests/synth/Operations/: Abds.mlir  Abdu.mlir  Add.mlir  AddNsw.mlir  AddNswNuw.mlir  AddNuw.mlir  And.mlir  Ashr.mlir  AshrExact.mlir  AvgCeilS.mlir  AvgCeilU.mlir  AvgFloorS.mlir  AvgFloorU.mlir  Lshr.mlir  Mods.mlir  (+32 more)
tests/utils/: test_verifier_utils.py
xdsl_smt/benchmark/: benchmark.py
xdsl_smt/cli/: arg_parser.py  benchmark.py  eval_final.py  syn_test.py  synth_one_iteration.py  synth_transfer.py  transfer_function_verifier.py  xdsl_tv.py
xdsl_smt/dialects/: smt_bitvector_dialect.py  transfer.py
xdsl_smt/eval_engine/: CMakeLists.txt  eval.py  eval_llvm_kbs.py  llvm_eval.py  tester.py
xdsl_smt/eval_engine/src/: APInt.cpp  APInt.h  AbstVal.cpp  AbstVal.h  Eval.cpp  Eval.h  Results.cpp  Results.h  jit.cpp  jit.h  llvmKBs.cpp  llvm_tests.h  main.cpp  utils.cpp
xdsl_smt/eval_engine/src/llvm_eval/: common.cpp  common.h  cr_tests.h  im_tests.h  kb_tests.h  llvm_eval.cpp
xdsl_smt/eval_engine/src/reject_sampling/: reject_sampling.cpp
xdsl_smt/eval_engine/src/xfer_enum/: enum_domain.cpp  xfer_enum.cpp
xdsl_smt/passes/: dead_code_elimination.py  transfer_dead_code_elimination.py  transfer_lower.py
xdsl_smt/semantics/: transfer_semantics.py
xdsl_smt/utils/: compare_result.py  cost_model.py  func_with_cond.py  function_with_condition.py  log_utils.py  lower_utils.py  mcmc_sampler.py  mutation_program.py  random.py  solution_set.py  synth_context.py  synth_operators.py  synthesizer_context.py  transfer_to_smt_util.py  verifier_utils.py  visualize.py
(+66 files in other folders)
