[project]
name = "xdsl-smt"
version = "0.0.0"
dependencies = [
  "z3-solver==4.12.1.0",
  "xdsl==0.36.0",
]

[project.optional-dependencies]
dev = [
  "pyright==1.1.393",
  "lit<16.0.0",
  "pytest<8.0",
  "filecheck==0.0.23",
  "pre-commit==3.3.1",
  "typing-extensions==4.12.2",
]

[tool.setuptools]
platforms = ["Linux", "Mac OS-X", "Unix"]
packages = ["xdsl_smt"]
zip-safe = false

[tool.setuptools.package-data]
xdsl_smt = ["py.typed"]

[project.scripts]
xdsl-smt = "xdsl_smt.cli.xdsl_smt:main"
xdsl-tv = "xdsl_smt.cli.xdsl_tv:main"
xdsl-synth = "xdsl_smt.cli.xdsl_synth:main"
xdsl-translate = "xdsl_smt.cli.xdsl_translate:main"
verify-pdl = "xdsl_smt.cli.verify_pdl:main"
verifier = "xdsl_smt.cli.transfer_function_verifier:main"
cpp-translate = "xdsl_smt.cli.cpp_translate:main"
superoptimize = "xdsl_smt.cli.superoptimize:main"
syn-test = "xdsl_smt.cli.syn_test:main"
synth-transfer = "xdsl_smt.cli.synth_transfer:main"
benchmark-synth = "xdsl_smt.cli.benchmark:main"
eval-final = "xdsl_smt.cli.eval_final:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableExperimentalFeatures = true
reportImportCycles = false
reportUnnecessaryIsInstance = false
typeCheckingMode = "strict"
include = ["xdsl_smt"]
ignore = ["tests", "outputs"]
